# study-planner

./: .gitignore  README.md  ingest.py  main.py  pyproject.toml  requirements.txt
src/: agent.py  database.py  pdf_processor.py
